--- a/day1/index.html
+++ b/day1/index.html
@@ -14,52 +14,74 @@
     <section class="keys">
         <div data-key="65" class="key">
             <kbd>A</kbd>
-            <span class="sound">clap</span>
+            <span class="sound">bear</span>
         </div>
         <div data-key="83" class="key">
             <kbd>S</kbd>
-            <span class="sound">hihat</span>
+            <span class="sound">bell</span>
         </div>
         <div data-key="68" class="key">
             <kbd>D</kbd>
-            <span class="sound">kick</span>
+            <span class="sound">count</span>
         </div>
         <div data-key="70" class="key">
             <kbd>F</kbd>
-            <span class="sound">openhat</span>
+            <span class="sound">drum</span>
         </div>
         <div data-key="71" class="key">
             <kbd>G</kbd>
-            <span class="sound">boom</span>
+            <span class="sound">farting</span>
         </div>
         <div data-key="72" class="key">
             <kbd>H</kbd>
-            <span class="sound">ride</span>
+            <span class="sound">gunshot</span>
         </div>
         <div data-key="74" class="key">
             <kbd>J</kbd>
-            <span class="sound">snare</span>
+            <span class="sound">horn</span>
         </div>
         <div data-key="75" class="key">
             <kbd>K</kbd>
-            <span class="sound">tom</span>
+            <span class="sound">LOL</span>
         </div>
         <div data-key="76" class="key">
             <kbd>L</kbd>
-            <span class="sound">tink</span>
+            <span class="sound">train</span>
         </div>
 
     </section>
 </body>
 
-<audio data-key="65" src="assets/sounds/clap.wav"></audio>
-<audio data-key="83" src="assets/sounds/hihat.wav"></audio>
-<audio data-key="68" src="assets/sounds/kick.wav"></audio>
-<audio data-key="70" src="assets/sounds/openhat.wav"></audio>
-<audio data-key="71" src="assets/sounds/boom.wav"></audio>
-<audio data-key="72" src="assets/sounds/ride.wav"></audio>
-<audio data-key="74" src="assets/sounds/snare.wav"></audio>
-<audio data-key="75" src="assets/sounds/tom.wav"></audio>
-<audio data-key="76" src="assets/sounds/tink.wav"></audio>
+<audio data-key="65" src="assets/sounds/bear.mp3"></audio>
+<audio data-key="83" src="assets/sounds/bell.mp3"></audio>
+<audio data-key="68" src="assets/sounds/count.mp3"></audio>
+<audio data-key="70" src="assets/sounds/drum.mp3"></audio>
+<audio data-key="71" src="assets/sounds/farting.mp3"></audio>
+<audio data-key="72" src="assets/sounds/gunshot.mp3"></audio>
+<audio data-key="74" src="assets/sounds/horn.mp3"></audio>
+<audio data-key="75" src="assets/sounds/laughing.mp3"></audio>
+<audio data-key="76" src="assets/sounds/train.mp3"></audio>
+
+
+
+<script>
+    function makeSound( e ) {
+        let sound = document.querySelector( `audio[data-key="${e.keyCode}"]` );
+        let soundBtn = document.querySelector( `div[data-key="${e.keyCode}"]` );
+        if ( !sound ) return;
+        sound.play();
+        soundBtn.classList.add( 'playing' )
+    };
+
+    function removePlaying( e ) {
+        this.classList.remove( 'playing' );
+    }
+    const keys = document.querySelectorAll( '.key' );
+    keys.forEach( key => key.addEventListener( 'transitionend', removePlaying ) );
+
+    window.addEventListener( 'keydown', makeSound );
+
+
+</script>
 
 </html>
