Added some styling to clock

--- a/day2/index.html
+++ b/day2/index.html
@@ -70,6 +70,16 @@
             transform: rotate(90deg);
             transition-timing-function: cubic-bezier(0.67, 1.88, 0.59, -0.23);
         }
+
+        .second-hand {
+            background: red;
+            height: 2px;
+        }
+
+        .hour-hand {
+            width: 8rem;
+            left: 23%;
+        }
     </style>
 
     <script>
