--- a/day12/index.html
+++ b/day12/index.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         const pressed = [];
-        const code = 'hello';
+        const code = 'kala';
 
         window.addEventListener( 'keyup', ( e ) => {
             console.log( e.key )
