--- a/day15/index-START.html
+++ b/day15/index-START.html
@@ -35,12 +35,24 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <button class="delete-items">
+      Delete all
+    </button>
+    <button class="check-items">
+      Check All
+    </button>
+    <button class="uncheck-items">
+      Uncheck all
+    </button>
   </div>
 
   <script>
     const addItems = document.querySelector( '.add-items' );
     const itemsList = document.querySelector( '.plates' );
     const items = JSON.parse( localStorage.getItem( 'items' ) ) || [];
+    const deleteItems = document.querySelector( '.delete-items' );
+    const checkItems = document.querySelector( '.check-items' );
+    const uncheckItems = document.querySelector( '.uncheck-items' );
 
     function addItem( e ) {
       e.preventDefault();
@@ -77,11 +89,47 @@
 
     };
 
+    function handleDelete( e ) {
+      localStorage.clear();
+      location.reload();
+    }
+
+    function handleCheck() {
+      itemsList.innerHTML = items.map( ( plate, i ) => {
+        plate.done = true;
+
+        return `
+          <li>
+            <input type="checkbox" data-index="${i}" id="item-${i}" checked />
+            <label for="item-${i}">${plate.text}</label>
+          </li>
+        `
+      } ).join( '' );
+      localStorage.setItem( 'items', JSON.stringify( items ) );
+    }
+
+    function handleUnCheck() {
+      itemsList.innerHTML = items.map( ( plate, i ) => {
+        plate.done = false;
+        return `
+          <li>
+            <input type="checkbox" data-index="${i}" id="item-${i}"  />
+            <label for="item-${i}">${plate.text}</label>
+          </li>
+        `
+      } ).join( '' );
+      localStorage.setItem( 'items', JSON.stringify( items ) );
+
+    }
+
 
     addItems.addEventListener( 'submit', addItem );
     itemsList.addEventListener( 'click', toggleDone );
-    populateList( items, itemsList );
+    deleteItems.addEventListener( 'click', handleDelete );
+    checkItems.addEventListener( 'click', handleCheck );
+    uncheckItems.addEventListener( 'click', handleUnCheck );
 
+    populateList( items, itemsList );
   </script>
 
 
