Added a btn to take a photo

--- a/day18/index.html
+++ b/day18/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="photobooth">
-    <canvas class="photo"></canvas>
+    <button onclick="takePhoto()">Take a photo</button> <canvas class="photo"></canvas>
     <video class="player"></video>
     <div class="strip"></div>
   </div>
