--- a/day19/index-START.html
+++ b/day19/index-START.html
@@ -35,6 +35,10 @@
         p.textContent = '🐶🐶🐶🐶'
       }
 
+      if ( transcript.includes( 'love' ) ) {
+        p.textContent = '👩‍❤️‍💋‍👨👩‍❤️‍💋‍👨❣️👩‍❤️‍💋‍👨👩‍❤️‍💋‍👨❣️👩‍❤️‍💋‍👨👩‍❤️‍💋‍👨❣️'
+      }
+
     } );
 
     recognition.addEventListener( 'end', recognition.start );
