--- a/day31/index-START.html
+++ b/day31/index-START.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Whack A Mole!</title>
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
   <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
-
+  <div class="flex-center">
+    <button onClick="startGame()" class="button">
+      Start!
+    </button>
+  </div>
   <div class="game">
     <div class="hole hole1">
       <div class="mole"></div>
@@ -32,11 +37,58 @@
     </div>
   </div>
 
-<script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+  <script>
+    const holes = document.querySelectorAll( '.hole' );
+    const scoreBoard = document.querySelector( '.score' );
+    const moles = document.querySelectorAll( '.mole' );
+    let lastHole;
+    let timeUp = false;
+    let score = 0;
 
-</script>
+
+    function randomTime( min, max ) {
+      return Math.round( Math.random() * ( max - min ) + min );
+    }
+    function randomHole( holes ) {
+      const index = Math.floor( Math.random() * holes.length );
+      const hole = holes[index];
+      if ( hole == lastHole ) {
+        console.log( 'That is the same hole' );
+        return randomHole( holes );
+
+      }
+      lastHole = hole;
+      return hole;
+    }
+
+    function peep() {
+      const time = randomTime( 200, 1000 );
+      const hole = randomHole( holes );
+
+      hole.classList.add( 'up' );
+      setTimeout( () => {
+        hole.classList.remove( 'up' );
+        if ( !timeUp ) peep();
+      }, time );
+    }
+
+    function startGame() {
+      scoreBoard.textContent = 0;
+      timeUp = false;
+      score = 0;
+      peep();
+      setTimeout( () => timeUp = true, 10000 );
+    }
+
+    function bonk( e ) {
+      if ( !e.isTrusted ) return;
+      score++;
+      this.classList.remove( 'up' );
+      scoreBoard.textContent = score;
+    }
+
+    moles.forEach( mole => mole.addEventListener( 'click', bonk ) )
+  </script>
 </body>
+
 </html>
